# peripersonal-space

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  README.md
app/conf/: doubleTouchDemo.ini  doubleTouchDemoSIM.ini  doubleTouchSIMsymmetricalHandConf.ini  left_forearm_vtRF.ini  left_hand_vtRF.ini  right_forearm_vtRF.ini  right_hand_vtRF.ini  taxels1D_45cmRF_skinV2_learned_noLeftHand.ini  taxels1D_empty.ini  taxels1D_learned.ini  taxels1D_learned_allButRightForearm.ini  taxels1D_learned_rightHandLeftForearm.ini  taxels1D_noFAR.ini  taxels2D_learned.ini  virtualContactGeneration.ini  visuoTactileRF.ini
app/conf/taxelsFiles/: taxels1D_45cmRF_skinV2_perfect_allButRightForearm.ini  taxels1D_45cmRF_skinV2_perfect_l_forearm.ini  taxels1D_45cmRF_skinV2_perfect_l_hand.ini  taxels1D_45cmRF_skinV2_perfect_r_forearm.ini  taxels1D_45cmRF_skinV2_perfect_r_hand.ini
app/conf/taxelsFiles/forearmSkinV1/: taxels1D_learned_leftHandLeftForearm.ini
app/scripts/: Demo_PPS.xml  Demo_PPS_OptFlow.xml  PPS_OptFlow.xml  doubleTouch.xml  iCub_Log_tx_rx_time.xml  ppsAndReactControl_icub.xml  ppsAndReactControl_icubSim.xml  ppsAndReactControl_icub_Lyon.xml  ppsAndReactControl_icub_redBall.xml  ppsAndReactControl_ultimateTracker_icub.xml  ppsAndReactCtrl_log_icub.xml  pps_1D_pf3dTracker_prelearned.xml  pps_skinAndiCubGuis_Lyon.xml  pps_with_objectValence_Test.xml
app/scripts/bonus/: SIM_testLogging.xml  iCub_Log.xml  iCub_Log_SIM.xml  iCub_Log_tx_rx_time.xml  iCub_dataSetPlayer_SIM.xml  ppsAndReactControl_icub_UPF.xml
app/scripts/bonus-or-deprecated/: PPS_Dumper.xml  doubleTouch_SIM.xml  iCub_dataSetPlayer.xml  ppsAndReactControl_icubSim.xml  ppsAndReactControl_ultimateTracker_icub.xml  pps_with_objectValence_Test.xml
app/scripts/bonus-or-deprecated/replaying/: dataPlayer_jointsInertialSkinCompSkinEvents.xml  dataPlayer_jointsInertialSkinHands_SIM.xml  dataPlayer_skinEvents.xml
app/scripts/bonus/replaying/: dataPlayer_jointsInertial_SIM.xml
lib/: CMakeLists.txt
lib/include/iCub/periPersonalSpace/: iCubDblTchSlv.h  iKinFwdMod.h  parzenWindowEstimator.h  taxelPWE.h  utils.h
lib/src/: iCubDblTchSlv.cpp  iKinFwdMod.cpp  parzenWindowEstimator.cpp  taxelPWE.cpp  utils.cpp
matlab-scripts/visualization/: .gitignore  README.md
matlab-scripts/visualization/Matlab/: histMap3D.m  hist_map3d.m
matlab-scripts/visualization/Matlab/ICubFwdKinNew/: WholeBodyFwdKin.m
matlab-scripts/visualization/Matlab/ICubFwdKinNew/WaistHeadFwdKin/: DrawEye.m  DrawFace.m  Ry.m  WaistHeadFwdKin.m
matlab-scripts/visualization/Matlab/ICubFwdKinNew/WaistInertiaFwdKin/: DrawEye.m  DrawRectangle.m  WaistInertiaFwdKin.m
matlab-scripts/visualization/Matlab/left_forearm_V1/: Translation.m  leftForearm2D_withTaxelIDs.fig  left_forearm_assembly_18coverHolesPos_iCubV1_CAD.mat  left_forearm_taxel_pos_mesh.mat  left_forearm_upper_patch_7triangleMidpointsPos_iCubV1_CAD.mat  loadTaxelPositions.m  parzen_estimation.m  plotTaxelPositions.m  ppsPlot_leftForearm.m  ppsPlot_leftForearm_func.m  stupid_test.m  taxels1D_learned_l_forearm.ini
matlab-scripts/visualization/Matlab/left_palm_V2.1/: Taxel_positions_left_palm_FoR10_withSkinEmulationForSIMregions.fig  left_palm_only_IDs_and_positions_meters.txt  left_palm_only_handIDs_and_positions_meters.txt  loadTaxelPositions_l_hand.m  plot_and_transform_taxels_left.m  ppsPlot_leftPalm.m  ppsPlot_leftPalm_func.m  representative_taxel_regions_simulator_left_palm.m  taxel_positions_with_IDs_left_palm_Marco.mat  taxels1D_learned_l_hand.ini
matlab-scripts/visualization/Matlab/plotSkinParts2D/: TaxelIDs_rightForearm_likeSkinGui.fig  TaxelIDs_rightUpperArm_likeSkinGui.fig  TaxelIDs_torso_likeSkinGui.fig  plotSkinParts2D.m  plotTaxels.m  plotTaxelsPOSUNUTE.m
matlab-scripts/visualization/Matlab/right_forearm_V1/: loadTaxelPositions_r_forearm.m  plotTaxelPositions.m  ppsPlot_rightForearm.m  ppsPlot_rightForearm_func.m  right_forearm_taxel_pos_mesh.mat  taxels1D_learned_r_forearm.ini
matlab-scripts/visualization/Matlab/right_palm_V2.1/: Taxel_positions_right_palm_FoR10_withSkinEmulationForSIMregions.fig  loadTaxelPositions_r_hand.m  plot_and_transform_taxels_right.m  ppsPlot_rightPalm.m  ppsPlot_rightPalm_func.m  representative_taxel_regions_right_palm_simulator.m  right_palm_only_IDs_and_positions_meters.txt  right_palm_only_handIDs_and_positions_meters.txt  taxel_positions_with_IDs_right_palm_Marco.mat  taxels1D_learned_r_hand.ini
matlab-scripts/visualization/Matlab/singleTriangle/: CDC_PAD_positions.xlsx  plotSingleTriangle.m  transformNominalTriangle.m
matlab-scripts/visualization/Matlab/skin_masks/: importSkinMaskForearm.m  importSkinMaskPalm.m  palm_mask.csv
modules/: CMakeLists.txt
modules/demoAvoidance/: CMakeLists.txt  demoAvoidance.cpp
modules/doubleTouch/: CMakeLists.txt  iCubDblTchThrd.cpp  iCubDblTchThrd.h  iCubDoubleTouch.cpp
modules/fingertipTracker/: CMakeLists.txt  fgtThread.cpp  fgtThread.h  fingertipTracker.cpp
modules/ppsAggregEventsForiCubGui/: CMakeLists.txt  ppsAggregEventsForiCubGui.cpp
modules/sceneFlowMod/: CMakeLists.txt  sceneFlowModule.cpp  sceneFlowThreadMod.cpp  sceneFlowThreadMod.h
modules/selfCalibration/: CMakeLists.txt  iCubSelfCalib.cpp  iCubSelfCalib.h  iCubSelfCalibration.cpp
modules/skinEventsAggregator/: CMakeLists.txt  skinEventsAggregThread.cpp  skinEventsAggregThread.h  skinEventsAggregator.cpp
modules/tactileServoing/: CMakeLists.txt  RebaType.h  TemporalSmoothingFilter.cpp  actcontroller.h  tactileServoing.cpp  tctServoThread.cpp  tctServoThread.h
modules/testModule/: CMakeLists.txt  testModule.cpp
modules/testSkinDynLib/: CMakeLists.txt  testSkinDynLib.cpp
modules/ultimateTracker/: CMakeLists.txt  kalmanThread.cpp  kalmanThread.h  ultimateTracker.cpp  utManagerThread.cpp  utManagerThread.h
modules/virtualContactGeneration/: CMakeLists.txt  virtContactGenThread.cpp  virtContactGenThread.h  virtualContactGeneration.cpp
modules/visuoTactileRF/: CMakeLists.txt  visuoTactileRF.cpp  vtRFThread.cpp  vtRFThread.h
modules/visuoTactileWrapper/: CMakeLists.txt  visuoTactileWrapper.cpp  vtWThread.cpp  vtWThread.h
(+24 files in other folders)
